# gnns-for-ts

./: .gitignore  README.md  pyproject.toml
data/: README.md
notebooks/: experiments.ipynb  train.ipynb
src/: dataloader.py  models.py  utils.py  viz.py
src/data/: __init__.py  dataloader.py
src/data_loader/: dataloader.py
src/experiments/: experimenters.py  run.py
src/models/: __init__.py  dcrnn.py  layers.py  models.py
src/viz/: __init__.py  animations.py  viz.py
