[tool.poetry]
name = "gnns-for-ts"
version = "0.1.0"
description = ""
authors = ["VittorioRossi <rossi.vittori@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
pandas = "^2.2.1"
statsmodels = "^0.14.1"
tqdm = "^4.66.2"
torch-geometric = "^2.5.2"
networkx = "^3.2.1"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
